# upstreams-rs

./: Cargo.toml
src/: host.rs  lib.rs  main.rs  versioning.rs
src/host/: github.rs  gnome.rs  mod.rs  plain.rs
