[package]
name = "upstreams-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
color-eyre = "0.6.3"
colored_json = "5.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
